added a user endpoint to get all the pointscales of a specified user, and added all the logique behind
