# swagger/spring-server/src/main/java/io/AMT/gamification/api/endpoints/UsersApiController.java
@@ -2,10 +2,13 @@ package io.AMT.gamification.api.endpoints;
 
 import io.AMT.gamification.api.UsersApi;
 import io.AMT.gamification.api.model.BadgeRead;
+import io.AMT.gamification.api.model.PointScaleRead;
 import io.AMT.gamification.api.services.ConverterService;
 import io.AMT.gamification.entities.BadgeAwardEntity;
 import io.AMT.gamification.entities.BadgeEntity;
+import io.AMT.gamification.entities.PointScaleAwardEntity;
 import io.AMT.gamification.repositories.BadgeAwardRepository;
+import io.AMT.gamification.repositories.PointScaleAwardRepository;
 import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -23,6 +26,9 @@ public class UsersApiController implements UsersApi {
     BadgeAwardRepository badgeAwardRepository;
 
     @Autowired
+    PointScaleAwardRepository pointScaleAwardRepository;
+
+    @Autowired
     ConverterService converterService;
 
     @Override
@@ -34,5 +40,17 @@ public class UsersApiController implements UsersApi {
             badgeReads.add(converterService.toBadgeRead(badgeAwardEntity.getBadgeEntity()));
         }
         return ResponseEntity.ok(badgeReads);
+    }
+
+    @Override
+    public ResponseEntity<List<PointScaleRead>> getPointScalesFromUser(@ApiParam(value = "",required=true ) @PathVariable("userId") Long userId,
+                                                                       @ApiParam(value = "" ,required=true ) @RequestHeader(value="authorization", required=true) String authorization) {
+        List<PointScaleRead> pointScaleReads = new ArrayList<>();
+
+        for(PointScaleAwardEntity pointScaleAwardEntity : pointScaleAwardRepository.findPointScaleAwardEntitiesByUserEntity_Id(userId)){
+            pointScaleReads.add(converterService.toPointScaleRead(pointScaleAwardEntity.getPointScaleEntity()));
+        }
+
+        return ResponseEntity.ok(pointScaleReads);
     }
 }
